<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_gradient"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/warning"
                    app:tint="@color/white" />                 <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/txtPopupTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/warning"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/signs_of_fire_were_detected_check_now"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPopupOk"
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/confirm" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnPopupClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/close_24px"
            app:tint="@color/white" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>